fixed chapter alignment

--- a/src/App.css
+++ b/src/App.css
@@ -199,6 +199,7 @@ form{
   border: solid;
   width: 70vw;
 }
+
 .chapterM{
   color: #cae3c6;
   margin-top: 2px;
@@ -219,6 +220,42 @@ form{
 }
 
 .chapterM:hover{
+  color: azure;
+}
+
+.chButton{
+  color: #cae3c6;
+  margin-top: 4px;
+  margin-bottom: 2px;
+  padding-left: 10px;
+  padding-right: 10px;
+  background: #415865;
+  border-radius: 5px;
+  display: inline-block;
+  border: solid;
+  width: 5vw;
+  height: 1.5vw;
+}
+
+.chButton:hover{
+  color: azure;
+}
+
+.arrowButtons{
+  color: #cae3c6;
+  margin-top: 2px;
+  margin-bottom: 2px;
+  margin-left: 5px;
+  margin-right: 5px;
+  background: #415865;
+  border-radius: 5px;
+  display: inline-block;
+  border: solid;
+  width: 2vw;
+  height: 2vw;
+}
+
+.arrowButtons:hover{
   color: azure;
 }
 
