--- a/src/sources/Search.css
+++ b/src/sources/Search.css
@@ -90,7 +90,8 @@ html, body {
   padding: 20px;
   border-radius: 5px;
   display: inline-block;
-  border: none;
+  border: solid;
+  border-color: 	#B0C4DE;
   width: 100%;
 }
 
